# paperwork-engine

./: pyproject.toml
paperwork/: cli.py  collector.py  embed_plugin.py  exporter.py  math_interceptor.py  notes.py  search_index_builder.py
paperwork/templates/: _base.html  _kb_sidebar.html  _toc_tree.html  collection.html  collection_note.html  collection_section.html  homepage.html  search.html  single_note.html
paperwork/templates/css/: components.css  hero.css  navbar.css  page-content.css  reset.css  responsive.css  sidebar.css  style.css  variables.css
paperwork/templates/js/: script.js  search.js  sidebar.js  table-wrap.js  toc.js
